1.0.1
    adding fs and path to module exports
    better packaje.json information
    added extensions option
    added deep option
1.0.2
    minified build created (module.min.js)
    minified build added to package.json (to be used instead of source code on npm)
    minified build added to .gitignore (github is for source/development)
    source code added to .npmignore (npm is production)
    clean of lint errors & warnings (refactor)
    added realPath & normalizePath option
    Fixed path separator duplication
1.0.3
    added exclude & include options (wip)
    improved build file (keeps js doc and params names)
1.1.0
    finished include & exclude options (GerHobbelt pull)
    100% UT coverage (GerHobbelt pull)
    minor fixes and updates
1.1.1
    fix normalizePath bug
    added continuous integration
1.1.2
    improved build (jsdocs added to minified version)
    improved jsdoc
    package switched to non minified version (minified build removed)
    fix all linter errors (javascript standard - https://github.com/standard/standard)