@@ -26,3 +26,4 @@
     improved jsdoc
     package switched to non minified version (minified build removed)
     fix all linter errors (javascript standard - https://github.com/standard/standard)
+    adds content from files to file object (feature/readContent)
